Removed `MaxPermSize=512m` (deprecated in JDK 8)